# tdd-project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pyproject.toml2
store/: main.py
store/controllers/: product.py
store/core/: config.py
store/models/: base.py
store/schemas/: base.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
